tests/positive/InstanceAxiom.juvix
module InstanceAxiom;

trait
type T := t;

axiom <body> : T;

instance
inst : T := <body>;
