tests/negative/Internal/CoercionTargetNotATrait.juvix
module CoercionTargetNotATrait;

trait
type T A := mkT {a : A};

type Maybe A := just A | nothing;

coercion
inst {A} {{T A}} : Maybe A := nothing;
